Take screenshot after every step performed

--- a/.env
+++ b/.env
@@ -13,4 +13,5 @@ SLEEP_TIME = 0
 # config for print_tree
 LOG = 0  #0 for no log, 1 for log
 MAX_DEPTH = 10000
-RETURN_STRUCTURE = True # Need this as true for the code to work
+RETURN_STRUCTURE = 0 # Need this as true (1) for the code to generate tree.json and tree.txt
+GET_SCREENSHOT = 1 # Need this as true (1) for the code to generate screenshots after every step
