Added full resource usage along side just the script usage

--- a/.env
+++ b/.env
@@ -8,7 +8,12 @@ MAX_CPU_USAGE = 10 #%
 STEPS_FILE = "steps.txt"
 SLEEP_TIME = 0
 # config for print_tree
-LOG = 0  #0 for no log, 1 for log
+LOG = 1  #0 for no log, 1 for log
 MAX_DEPTH = 10000
-RETURN_STRUCTURE = 0 # Need this as true (1) for the code to generate tree.json and tree.txt
+RETURN_STRUCTURE = 1 # Need this as true (1) for the code to generate tree.json and tree.txt
 GET_SCREENSHOT = 1 # Need this as true (1) for the code to generate screenshots after every step
+
+#----------------MONITOR------------------------
+CMD = "python tree.py -i chrome.exe -o chrome"
+MAX_MEMORY_USAGE_MB = 70 # MB
+MAX_TOTAL_MEMORY_USAGE_PER = 100 # %
